<resources>
    <string name="app_name">Cook King</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="user">User</string>
    <string name="add_recipe">Add recipe</string>

    <string name="cd_add_screen">content description add screen</string>
    <string name="addTitle">Lữu trữ ghi chú vào bếp của bạn</string>
    <string name="addDescription">Giúp cộng đồng tìm ý tưởng mới</string>
    <string name="addRecipe">Add recipe</string>
    <string name="addRecipeDescription">Giúp cộng đồng tìm ý tưởng mới</string>
    <string name="btn_add_new_recipe">Viết món mới</string>
    <string name="btn_share_tips">Bí quyết</string>
    <string name="copy_right">Bản quyền của © Cook King Inc. All Rights Reserved</string>
    <string name="recipe_name">Name recipe</string>
    <string name="recipe_description">description recipe</string>

    <string name="Up_to_stream">Lên sóng</string>
    <string name="addCardTitle">Bạn đã đăng hình món mình nấu ở đây chưa?</string>
    <string name="addCardDescription">Truyền cảm hứng nấu món của bạn đến mọi người nào!</string>
    <string name="hint_addRecipe">Hãy chia sẻ với mọi người về món \nnày của bạn nhé - ai đã truyền\ncảm hứng cho bạn, tại sao nó đặc \nbiệt, bạn nấu món này cho ai?.</string>
    <string name="account_menu_name">Setting</string>
    <string name="account_menu_desc">For something</string>
    <string name="account_menu_notify">Notify</string>
    <string name="account_menu_saved_food">Saved food</string>
    <string name="account_menu_self_food">Self food</string>
    <string name="account_menu_info">My profile</string>
    <string name="account_menu_setting">Setting</string>
    <string name="account_menu_exit">Logout</string>
    <string name="title_today_popular_recipe">Món tìm kiếm phổ biến hôm nay</string>
    <string name="search_recipe">Tìm tên các món, các nguyên liệu hay bí quyết</string>
    <string name="recent_search">Món đã xem gần đây</string>

</resources>